--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
-    "express": "^4.17.3",
+    "express": "^4.18.2",
     "express-session": "^1.17.2",
     "liquid-express-views": "^1.0.8",
     "method-override": "^3.0.0",
